<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_surface">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_surface"
        android:title="@string/empleados_titulo"
        app:navigationIcon="@android:drawable/ic_menu_revert"
        app:navigationIconTint="@color/md_on_surface"
        app:titleTextColor="@color/md_on_surface"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/empleados_buscar"
        app:startIconDrawable="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEmpleados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="12dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tilBuscar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvVacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empleados_vacio"
        android:textAlignment="center"
        android:textColor="@color/md_on_surface_variant"
        app:layout_constraintTop_toBottomOf="@id/tilBuscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/md_primary"
        app:tint="@color/md_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>